# vapoursynth-adaptivebinarize

./: meson.build
.github/workflows/: build.yaml
